--- a/templates/sign_up.html
+++ b/templates/sign_up.html
@@ -1,42 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../static/styles/sign_up.css">
     <link rel="icon" href="/static/img/icon.ico">
     <title>Join Petshop</title>
 </head>
+
 <body>
     <!-- Header -->
     <header>
-            <!-- logo -->
-            <a href="index.html" class="logo">
-                <img src="/static/img/icon.ico" alt="Petshop">
-            </a>
-            <!-- Hyper links -->
-            <div>
-                <span>Already have an account?</span>
+        <!-- Hyper links -->
+        <div>
+
+        </div>
+    </header>
+    <!-- Form -->
+    <div class="container">
+        <a href="../index.html">
+            <img src="/static/img/icon.ico" alt="Your Image" class="center-image">
+        </a>
+        <!-- Form for register-->
+        <form action="/submit_registration" method="post">
+            <label for="name">Name:</label><br>
+            <input type="text" id="name" name="name"><br>
+            <label for="email">Email:</label><br>
+            <input type="email" id="email" name="email"><br>
+            <label for="phone">Phone (optional):</label><br>
+            <input type="tel" id="phone" name="phone"><br>
+            <label for="password">Password:</label><br>
+            <input type="password" id="password" name="password"><br>
+            <label for="confirm-password">Confirm Password:</label><br>
+            <input type="password" id="confirm-password" name="confirm-password"><br>
+            <span>Already have an account?</span>
             <ul>
                 <li><a href="/templates/sign_in.html">Sign in →</a></li>
             </ul>
-            </div>         
-    </header>
-    <!-- Form -->
-    <div class="box-form">
-        <!-- Form for register-->
-        <form action="/sign_up" method="POST">
-            <div>
-                <label for="name">Name</label>
-                <input type="text" id="name" name="name" required>
-            </div>
-            <div>
-                <label for="email">Email</label>
-                <input type="email" id="email" name="email" required>
-            </div>
-            <div>
-                <label for="password">Password</label>
-                <input type="password" id="password" name="password" required>
-            </div>
-            <button type="submit">Sign up</button>
+            <button>Create acount</button>
+        </form>
+    </div>
 </body>
+
 </html>
