Feat: include font awesome to iframes and make the css responsive
Fix: Indent

Style: add style to contact page

--- a/templates/sign_up.html
+++ b/templates/sign_up.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../static/styles/style.css">
     <link rel="icon" href="/static/img/icon.ico">
     <title>Join Petshop</title>
 </head>
@@ -10,7 +11,7 @@
     <!-- Header -->
     <header>
             <!-- logo -->
-            <a href="index.html" class="logo">
+            <a href="../index.html" class="logo">
                 <img src="/static/img/icon.ico" alt="Petshop">
             </a>
             <!-- Hyper links -->
