--- a/templates/contact.html
+++ b/templates/contact.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../static/styles/style.css">
+    <link rel="stylesheet" href="../static/styles/contact_style.css">
     <link rel="icon" href="/static/img/icon.ico">
     <script src="https://kit.fontawesome.com/401e7f8f46.js" crossorigin="anonymous"></script>
     <title>Contacto</title>
@@ -114,33 +114,31 @@
 
         </div>
     </section>
-    <!-- footer -->
+    <!-- Footer section -->
     <footer>
-        <!-- nav -->
+        <!-- Navigation section -->
         <nav>
             <ul>
-                <li class="header">Navegacion</li>
-                <li><a href="/templates/product.html">Productos</a></li>
-                <li><a href="/templates/contact.html">Contacto</a></li>
-                <li><a href="/templates/sign_in.html">Iniciar Sesión</a></li>
-                <li><a href="/templates/sign_up.html">Registrarse</a></li>
+                <li><a href="/index.html">Home</a></li>
+                <li><a href="#about">About Us</a></li>
+                <li><a href="#services">Services</a></li>
+                <li><a href="/templates/contact.html">Contact</a></li>
             </ul>
         </nav>
-        <!-- payment methods -->
-        <div>
-            <img src="/static/img/pay_methop.png" alt="">
+
+        <!-- Payment methods -->
+        <div class="payment-methods">
+            <i class="fab fa-cc-visa"></i>
+            <i class="fab fa-cc-mastercard"></i>
+            <i class="fab fa-cc-amex"></i>
+            <i class="fab fa-cc-paypal"></i>
         </div>
-        <!-- social networks -->
-        <div class="social">
-            <a href="">
-                <i class="fa-brands fa-facebook"></i>
-            </a>
-            <a href="">
-                <i class="fa-brands fa-instagram"></i>
-            </a>
-            <a href="">
-                <i class="fa-brands fa-twitter"></i>
-            </a>
+
+        <!-- Social media icons -->
+        <div class="social-media">
+            <a href="https://twitter.com" target="_blank"><i class="fab fa-twitter"></i></a>
+            <a href="https://instagram.com" target="_blank"><i class="fab fa-instagram"></i></a>
+            <a href="https://facebook.com" target="_blank"><i class="fab fa-facebook"></i></a>
         </div>
     </footer>
 </body>
