fix: href index.html

--- a/templates/product.html
+++ b/templates/product.html
@@ -12,7 +12,7 @@
     <header>
         <nav>
             <!-- logo -->
-            <a href="index.html" class="logo">
+            <a href="../index.html" class="logo">
                 <img src="/static/img/icon.ico" alt="Petshop">
                 <!-- Hyper links -->
             <ul>
