--- a/templates/sign_up.html
+++ b/templates/sign_up.html
@@ -10,7 +10,7 @@
     <!-- Header -->
     <header>
             <!-- logo -->
-            <a href="index.html" class="logo">
+            <a href="../index.html" class="logo">
                 <img src="/static/img/icon.ico" alt="Petshop">
             </a>
             <!-- Hyper links -->
