Feat: include font awesome to iframes and make the css responsive (#3)

--- a/templates/product.html
+++ b/templates/product.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="#">
+    <link rel="stylesheet" href="../static/styles/style.css">
     <link rel="icon" href="/static/img/icon.ico">
     <title>Petshop</title>
 </head>
@@ -16,10 +16,10 @@
                 <img src="/static/img/icon.ico" alt="Petshop">
                 <!-- Hyper links -->
             <ul>
-                <li><a href="/templates/product.html">Products</a></li>
-                <li><a href="/templates/contact.html">Contact</a></li>
-                <li><a href="/templates/sign_in.html">Sign in</a></li>
-                <li><a href="/templates/sign_up.html">Sign up</a></li>
+                <li><a href="/templates/product.html">Productos</a></li>
+                <li><a href="/templates/contact.html">Contacto</a></li>
+                <li><a href="/templates/sign_in.html">Iniciar Sesión</a></li>
+                <li><a href="/templates/sign_up.html">Registrarse</a></li>
             </ul>
         </nav>
     </header>
