--- a/templates/sign_up.html
+++ b/templates/sign_up.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../static/styles/style.css">
     <link rel="icon" href="/static/img/icon.ico">
     <title>Join Petshop</title>
 </head>
