Fix: switch format image to webp for faster downloads and less data consumption and insertinto html

--- a/templates/contact.html
+++ b/templates/contact.html
@@ -7,7 +7,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../static/styles/contact_style.css">
     <link rel="icon" href="/static/img/icon.ico">
-    <script src="https://kit.fontawesome.com/401e7f8f46.js" crossorigin="anonymous"></script>
     <title>Contacto</title>
 
 </head>
@@ -120,9 +119,9 @@
         <nav>
             <ul>
                 <li><a href="/index.html">Home</a></li>
-                <li><a href="#about">About Us</a></li>
-                <li><a href="#services">Services</a></li>
-                <li><a href="/templates/contact.html">Contact</a></li>
+                <li><a href="/templates/sign_in.html">Iniciar Sesión</a></li>
+                <li><a href="/templates/sign_up.html">Registrarse</a></li>
+                <li><a href="/templates/contact.html">Contacto</a></li>
             </ul>
         </nav>
 
@@ -141,6 +140,7 @@
             <a href="https://facebook.com" target="_blank"><i class="fab fa-facebook"></i></a>
         </div>
     </footer>
+    <script src="https://kit.fontawesome.com/401e7f8f46.js" crossorigin="anonymous"></script>
 </body>
 
 </html>
