--- a/templates/product.html
+++ b/templates/product.html
@@ -6,7 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/static/styles/product_style.css">
     <link rel="icon" href="/static/img/icon.ico">
-    <script src="https://kit.fontawesome.com/401e7f8f46.js" crossorigin="anonymous"></script>
     <title>Products</title>
 </head>
 
@@ -31,25 +30,25 @@
 <!-- products -->
 <section class="products">
     <div>
-        <img src="/static/img/product1.png" alt="">
+        <img src="/static/img/product1.webp" alt="">
         <h3>Producto 1</h3>
         <p>Descripción del producto 1</p>
         <p>$100.00</p>
     </div>
     <div>
-        <img src="/static/img/product2.png" alt="">
+        <img src="/static/img/product2.webp" alt="">
         <h3>Producto 2</h3>
         <p>Descripción del producto 2</p>
         <p>$200.00</p>
     </div>
     <div>
-        <img src="/static/img/product3.png" alt="">
+        <img src="/static/img/product3.webp" alt="">
         <h3>Producto 3</h3>
         <p>Descripción del producto 3</p>
         <p>$300.00</p>
     </div>
     <div>
-        <img src="/static/img/product4.png" alt="">
+        <img src="/static/img/product4.webp" alt="">
         <h3>Producto 4</h3>
         <p>Descripción del producto 4</p>
         <p>$400.00</p>
@@ -60,25 +59,25 @@
 <!-- products -->
 <section class="products">
     <div>
-        <img src="/static/img/product5.png" alt="">
+        <img src="/static/img/product5.webp" alt="">
         <h3>Producto 1</h3>
         <p>Descripción del producto 1</p>
         <p>$100.00</p>
     </div>
     <div>
-        <img src="/static/img/product6.png" alt="">
+        <img src="/static/img/product6.webp" alt="">
         <h3>Producto 2</h3>
         <p>Descripción del producto 2</p>
         <p>$200.00</p>
     </div>
     <div>
-        <img src="/static/img/product2.png" alt="">
+        <img src="/static/img/product2.webp" alt="">
         <h3>Producto 3</h3>
         <p>Descripción del producto 3</p>
         <p>$300.00</p>
     </div>
     <div>
-        <img src="/static/img/product4.png" alt="">
+        <img src="/static/img/product4.webp" alt="">
         <h3>Producto 4</h3>
         <p>Descripción del producto 4</p>
         <p>$400.00</p>
@@ -89,9 +88,9 @@
         <nav>
             <ul>
                 <li><a href="/index.html">Home</a></li>
-                <li><a href="#about">About Us</a></li>
-                <li><a href="#services">Services</a></li>
-                <li><a href="/templates/contact.html">Contact</a></li>
+                <li><a href="/templates/sign_in.html">Iniciar Sesión</a></li>
+                <li><a href="/templates/sign_up.html">Registrarse</a></li>
+                <li><a href="/templates/contact.html">Contacto</a></li>
             </ul>
         </nav>
 
@@ -110,6 +109,7 @@
             <a href="https://facebook.com" target="_blank"><i class="fab fa-facebook"></i></a>
         </div>
     </footer>
+    <script src="https://kit.fontawesome.com/401e7f8f46.js" crossorigin="anonymous"></script>
 </body>
 
 </html>
