--- a/static/styles/contact_style.css
+++ b/static/styles/contact_style.css
@@ -1,217 +1,460 @@
-@import url('https://fonts.googleapis.com/css2?family=Varela+Round&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Varela+Round&display=swap");
 
 * {
-    box-sizing: border-box;
-    font-family: 'Varela Round', sans-serif;
-    margin: 0;
-    padding: 0;
+  box-sizing: border-box;
+  font-family: "Varela Round", sans-serif;
+  margin: 0;
+  padding: 0;
+}
+
+html {
+  width: 100%;
 }
 
 /* Header Styles */
 header {
-    background-color: #FCFCFC;
-    padding: 1rem;
+  background-color: #ffffff;
+  padding: 1rem;
 }
 
 header h1 {
-    font-size: 1.5rem;
-    /* Using rem for font sizes */
+  font-size: 1.5rem;
+  /* Using rem for font sizes */
 }
 
 header p {
-    font-size: 1rem;
+  font-size: 1rem;
 }
 
 header nav {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    flex-wrap: wrap;
-    /* Allow wrapping on smaller screens */
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-wrap: wrap;
+  /* Allow wrapping on smaller screens */
 }
 
 header nav ul {
-    list-style: none;
-    display: flex;
-    gap: 1rem;
-    /* Using gap for spacing */
+  list-style: none;
+  display: flex;
+  gap: 1rem;
+  /* Using gap for spacing */
 }
 
 header nav ul li {
-    display: inline-block;
+  display: inline-block;
 }
 
 header nav ul li a {
-    color: black;
-    text-decoration: none;
-    font-size: 1rem;
+  color: black;
+  text-decoration: none;
+  font-size: 1rem;
 }
 
 header img {
-    width: 10%;
-    min-width: 60px;
-    max-width: 200px;
-    height: auto;
+  width: 10%;
+  min-width: 60px;
+  max-width: 200px;
+  height: auto;
 }
 
 /* Usando media queries para ajustar la imagen según el tamaño de la pantalla */
 @media (min-width: 600px) {
-    header img {
-        width: 45%;
-        /* Aumenta el tamaño de la imagen a medida que el espacio disponible crece */
-        min-width: 80px;
-        /* Tamaño mínimo mayor para pantallas más grandes */
-    }
+  header img {
+    width: 45%; /* Aumenta el tamaño de la imagen a medida que el espacio disponible crece */
+    min-width: 80px; /* Tamaño mínimo mayor para pantallas más grandes */
+  }
 }
 
 @media (min-width: 1024px) {
-    header img {
-        width: 60%;
-        /* Aún más grande para pantallas grandes */
-        min-width: 100px;
-        /* Tamaño mínimo para pantallas grandes */
-    }
+  header img {
+    width: 60%; /* Aún más grande para pantallas grandes */
+    min-width: 100px; /* Tamaño mínimo para pantallas grandes */
+  }
 }
 
 .box_form_ubication {
-    display: flex;
-    background-color: lightblue;
-    justify-content: center;
-    align-items: start;
+  display: flex;
+  justify-content: center;
+  align-items: start;
 }
 
 .ubication_box {
-    width: 50%;
-    background-color: aquamarine;
-    align-items: center;
-    justify-content: center;
-    vertical-align: middle;
-    margin-left: 50px;
-    vertical-align: top;
-    margin: 20px 25px;
+  width: 50%;
+  background-color: hsl(36, 87%, 51%);
+  align-items: center;
+  justify-content: center;
+  vertical-align: middle;
+  margin-left: 50px;
+  vertical-align: top;
+  margin: 20px 25px;
+  padding: 50px;
+  border-radius: 50px;
+  min-height: 700px;
 }
 
 .form_box {
-    width: 50%;
-    background-color: lightpink;
-    align-items: center;
-    justify-content: center;
-    vertical-align: middle;
-    margin: 20px 25px 20px 50px;
+  width: 85%;
+  align-items: center;
+  justify-content: center;
+  vertical-align: middle;
+  margin: 20px 25px 20px 50px;
+  background-color: hsl(36, 87%, 51%);
+  padding: 50px;
+  border-radius: 50px;
 }
 
 .contact_form {
-    display: block;
-
+  display: block;
 }
 
 .form-control,
 .form-select,
-.form-texarea,
+.form-textarea,
 .form-radio {
-    margin: 10px 0px 10px 10px;
+  margin: 10px 0px 10px 10px;
 }
 
 .contact_form label {
-    width: 100%;
-    display: block;
+  width: 100%;
+  display: block;
 }
 
-.form-control input,
-select {
-    width: 70%;
-    margin: 3px 0px 3px 0px;
-    border-radius: 5px;
-    /* border: 1px solid salmon; */
+.form-control input {
+  margin: 3px 0px 3px 0px;
+  border-radius: 5px;
+  width: 90%;
+  padding: 10px;
+  margin-bottom: 10px;
+  border: 1px;
+  border-radius: 4px;
+  box-sizing: border-box;
+  font-size: 16px;
+
+}
+
+input,
+select,
+textarea {
+  background-color: #E0C172;
+}
+
+.form-select {
+  border: 1px;
+  margin: 3px 0px 3px 0px;
+  border-radius: 5px;
+  width: 95%;
+  padding: 10px;
+  margin-bottom: 10px;
+  border-radius: 4px;
+  box-sizing: border-box;
+  font-size: 16px;
+}
+
+textarea {
+  border-radius: 5px;
+  width: 90%;
+  padding: 10px;
+  font-size: 16px;
+  border: 1px;
+  margin: 10px 10px 10px 3px;
+}
+
+.radio-cat-dog {
+  margin-left: 50px;
+  padding: 10px;
+  margin-bottom: 10px;
+  font-size: 16px;
+  display: flex;
+}
+
+.label-dog-cat {
+  display: inline-block;
+  vertical-align: middle;
+  margin-left: 10px;
+}
+
+input[type="radio"] {
+  display: none;
+}
+
+input[type="radio"]+*::before {
+  content: "";
+  display: inline-block;
+  vertical-align: bottom;
+  width: 1rem;
+  height: 1rem;
+  margin-right: 0.3rem;
+  border-radius: 50%;
+  border-style: solid;
+  border-width: 0.1rem;
+  border-color: black;
+}
+
+input[type="radio"]:checked+* {
+  color: black;
+}
+
+input[type="radio"]:checked+*::before {
+  background: radial-gradient(black 0%, black 40%, transparent 50%, transparent);
+  border-color: black;
+}
+
+.button-send {
+  margin: 30px, 10px, 10px, 50px;
+  justify-content: center;
+  display: flex;
+  border-radius: 30px;
+  height: 50px;
+}
+
+.button-send input {
+  border-radius: 10px;
 }
 
 /* Ubication styles */
 
-.map {
-    border-radius: 50px;
+
+.ubication_box_map {
+  max-width: 1100px;
+  margin: 40px auto;
+  padding: 20px;
+  background-color: hsl(36, 87%, 51%);
+  align-items: center;
+  justify-content: center;
+  vertical-align: middle;
+  margin-left: 50px;
+  vertical-align: top;
+  margin: 20px 25px;
+  padding: 50px;
+  border-radius: 50px;
 }
+
+.map {
+  width: 100%;
+  height: 615px;
+  /* Increased height for the map container */
+  overflow: hidden;
+  position: relative;
+  border-radius: 50px;
+}
+
+
+.map iframe {
+  width: 100%;
+  height: 100%;
+  border: none;
+  top: 0;
+  left: 0;
+}
+
+.ubication_title {
+  margin-bottom: 20px;
+}
+
+
 
 /* Footer base styles */
 footer {
-    background-color: hsl(36, 87%, 51%);
-    /* Dark background color */
-    color: white;
-    /* White text color */
-    padding: 20px;
-    /* Padding around the footer */
-    display: flex;
-    justify-content: space-between;
-    /* Distribute items across the width */
-    align-items: center;
-    /* Align items vertically */
+  background-color: hsl(36, 87%, 51%);
+  /* Dark background color */
+  color: white;
+  /* White text color */
+  padding: 20px;
+  /* Padding around the footer */
+  /* display: flex; */
+  justify-content: space-between;
+  /* Distribute items across the width */
+  align-items: center;
+  /* Align items vertically */
 }
 
 /* Navigation styles */
 nav ul {
-    list-style: none;
-    /* Remove bullet points from the list */
-    padding: 0;
-    /* Remove default padding */
-    margin: 0;
-    /* Remove default margin */
-    display: flex;
-    /* Display as a horizontal row */
+  list-style: none;
+  /* Remove bullet points from the list */
+  padding: 0;
+  /* Remove default padding */
+  margin: 0;
+  /* Remove default margin */
+  display: flex;
+  /* Display as a horizontal row */
 }
 
 nav ul li {
-    margin-right: 20px;
-    /* Spacing between items */
+  margin-right: 20px;
+  /* Spacing between items */
 }
 
 nav ul li a {
-    text-decoration: none;
-    /* Remove underline from links */
-    color: white;
-    /* Keep text white */
+  text-decoration: none;
+  /* Remove underline from links */
+  color: white;
+  /* Keep text white */
 }
 
 nav ul li a:hover {
-    color: #ddd;
-    /* Change color on hover */
+  color: #ddd;
+  /* Change color on hover */
 }
 
 /* Payment methods styles */
 .payment-methods {
-    display: flex;
-    /* Display as a horizontal row */
+  display: flex;
+  /* Display as a horizontal row */
 }
 
 .payment-methods i {
-    font-size: 24px;
-    /* Icon size */
-    margin-right: 10px;
-    /* Spacing between icons */
-    color: white;
-    /* White icon color */
+  font-size: 24px;
+  /* Icon size */
+  margin-right: 10px;
+  /* Spacing between icons */
+  color: white;
+  /* White icon color */
 }
 
 /* Social media styles */
 .social-media {
-    display: flex;
-    /* Display as a horizontal row */
+  display: flex;
+  /* Display as a horizontal row */
 }
 
 .social-media a {
-    text-decoration: none;
-    /* No underline for links */
+  text-decoration: none;
+  /* No underline for links */
 }
 
 .social-media i {
-    font-size: 24px;
-    /* Icon size */
-    margin-right: 10px;
-    /* Spacing between icons */
-    color: white;
-    /* White icon color */
+  font-size: 24px;
+  /* Icon size */
+  margin-right: 10px;
+  /* Spacing between icons */
+  color: white;
+  /* White icon color */
 }
 
 .social-media i:hover {
-    color: #ddd;
-    /* Change color on hover */
+  color: #ddd;
+  /* Change color on hover */
 }
+
 /* Path: static/styles/style.css */
+
+/* Usando media queries para ajustar la imagen según el tamaño de la pantalla */
+
+@media (min-width: 0px) and (max-width: 600px) 
+{
+  .box_form_ubication {
+    display: block;
+    width: 90%;
+    padding: 10px;
+  }
+
+  .form_box {
+    width: 95%;
+    margin: 50px 10px;
+  }
+
+  .ubication_box_map {
+    margin: 10px;
+  }
+
+  .payment-methods, .social-media{
+  display: flex;
+  justify-content: center;
+  margin-top: 15px;
+  }
+  .box-nav{
+    display: flex;
+    flex-wrap: wrap;
+  }
+  header nav ul{
+    flex-wrap: wrap;
+  }
+  header nav ul li a {
+  font-size: 15px;
+  }
+  header nav ul li {
+    margin-right: 0px;
+  }
+  @media (max-width: 390px) {
+    header nav ul li a {
+      font-size: 12px;
+    }
+  }
+}
+
+@media (min-width: 600px) and (max-width: 1023px) {
+  .box_form_ubication {
+    display: block;
+    margin: auto;
+  }
+
+  .box_form_ubication {
+    display: block;
+    width: 100%;
+    padding: 10px;
+  }
+
+  .form_box {
+    width: 75%;
+    margin: 50px auto;
+    align-items: center;
+  }
+
+  .ubication_box_map {
+    margin: 50px auto;
+    width: 75%;
+  }
+  footer{
+    padding: 20px; /* Padding around the footer */
+    display: flex;
+    justify-content: space-between; /* Distribute items across the width */
+    align-items: center;
+  }
+  /* Payment methods styles */
+.payment-methods {
+  display: flex; /* Display as a horizontal row */
+}
+  .social-media
+  {display: flex;
+  }
+}
+  
+
+@media (min-width: 1024px) {
+
+
+  .box_form_ubication {
+    display: block inline;
+    width: 100%;
+    padding: 10px;
+  }
+
+  .form_box {
+    width: 40%;
+    margin: 50px auto;
+    align-items: center;
+    max-height: 900px;
+  }
+
+  .ubication_box_map {
+    margin: 50px auto;
+    width: 40%;
+    max-height: 900px;
+  }
+  footer{
+    padding: 20px; /* Padding around the footer */
+    display: flex;
+    justify-content: space-between; /* Distribute items across the width */
+    align-items: center;
+  }
+  /* Payment methods styles */
+.payment-methods {
+  display: flex; /* Display as a horizontal row */
+}
+  .social-media
+  {display: flex;
+  }
+
+}
