--- a/templates/sign_in.html
+++ b/templates/sign_in.html
@@ -1,33 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../static/styles/sign_in.css">
-    <link rel="icon" href="/static/img/icon.ico">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="../static/styles/sign_in.css" />
+    <link rel="icon" href="/static/img/icon.ico" />
     <title>Sign in to Petshop</title>
-</head>
+  </head>
 
-<body>
+  <body>
     <div class="container">
-        <a href="../index.html">
-            <img src="/static/img/icon.ico" alt="Your Image" class="center-image">
-        </a>
-        <!-- Form for register-->
-        <form action="/submit_registration" method="post">
-            <label for="email">Email:</label><br>
-            <input type="email" id="email" name="email">
-            <label for="password">Password:</label><br>
-            <input type="password" id="password" name="password">
-            <a href="/forgot_password">Forgot password?</a>
-            <br>
-            <button>Sign in</button>
-        </form>
+      <a href="../index.html">
+        <img src="/static/img/icon.ico" alt="img" class="center-image" />
+      </a>
+      <!-- Form for register-->
+      <form action="/submit_registration" method="post">
+        <p> Bienvenido de vuelta!</p>
+        <label for="email">Correo Electronico:</label><br />
+        <input
+          type="email"
+          id="email"
+          name="email"
+          placeholder="email@example.com"
+        />
+        <label for="password">Contraseña:</label><br />
+        <input type="password" id="password" name="password" />
+        <a href="/forgot_password">¿Te olvidaste la contraseña? Haz click Aquí</a>
+        <br />
+        <br />
+        <button>Iniciar sesion</button>
+      </form>
     </div>
 
     <div class="container2">
-        <p>New to petshop?</p> <a href="/templates/sign_up.html">Create an account</a>
+      <p>¿Nuevo en Petshop?</p><br />
+      <a href="/templates/sign_up.html">Crear una cuenta.</a>
     </div>
-</body>
+  </body>
 </html>
