cambie nombre de la clase de carousel para ver si funciona

--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -82,7 +82,7 @@ header img {
     overflow: hidden; /* para el carousel */
 }
 
-.carousel img {
+.carousel-img {
     width: 100%; 
     display: block;
     transition: transform 0.5s ease;
