otra vez hago cambios en el carousel

--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -79,13 +79,32 @@ header img {
 .carousel {
     max-width: 100%;
     margin: 0 auto;
-    overflow: hidden; /* para el carousel */
+    overflow: hidden; 
 }
 
-.carousel-img {
-    width: 100%; 
-    display: block;
-    transition: transform 0.5s ease;
+.carousel ul { 
+    display: flex;
+    animation: cambio 20s infinite
+    alternate horizontal;
+}
+
+.carousel li{
+    width: 100%;
+    list-style: none;
+}
+
+@keyframes cambio{
+    0% {margin-left: 0;} 
+    20% {margin-left: 0;} 
+   
+    25% {margin-left: -100%;} 
+    45% {margin-left: -100%;} 
+  
+    50% {margin-left: -200%;} 
+    70% {margin-left: -200%;} 
+
+    75% {margin-left: -300%}
+    100% { margin-left: -300%;}
 }
 
 h2 {
