--- a/static/styles/sign_up.css
+++ b/static/styles/sign_up.css
@@ -1,85 +1,83 @@
-@import url('https://fonts.googleapis.com/css2?family=Varela+Round&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Varela+Round&display=swap");
 
 * {
-    box-sizing: border-box;
-    font-family: 'Varela Round', sans-serif;
-    margin: 0;
-    padding: 0;
+  box-sizing: border-box;
+  font-family: "Varela Round", sans-serif;
+  margin: 0;
+  padding: 0;
 }
 
 body {
-    background-color: #f5f5f5;
+  background-color: #f5f5f5;
 }
 
 /* Base styles for the header */
 header {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 10px 20px;
-    background-color: #f5f5f5;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px 20px;
+  background-color: #f5f5f5;
 }
-
 
 /* Hyperlinks */
 ul {
-    list-style-type: none;
-    display: flex;
-    gap: 15px;
-    /* Spacing between links */
+  list-style-type: none;
+  display: flex;
+  gap: 15px;
+  /* Spacing between links */
 }
 
 ul li a {
-    text-decoration: none;
-    color: #000;
-    font-weight: bold;
-
+  text-decoration: none;
+  color: #000;
+  font-weight: bold;
 }
 
 /* Form styles */
 .container {
-    max-width: 600px;
-    margin: 0 auto;
-    text-align: center;
+  max-width: 600px;
+  margin: 0 auto;
+  text-align: center;
 }
 
 .center-image {
-    display: block;
-    mix-blend-mode: multiply;
-    margin: 0 auto;
-    width: 150px;
-    object-fit: cover;
-    margin-bottom: 20px;
+  display: block;
+  mix-blend-mode: multiply;
+  margin: 0 auto;
+  width: 150px;
+  object-fit: cover;
+  margin-bottom: 20px;
 }
 
 form {
-    display: inline-block;
-    text-align: left;
+  display: inline-block;
+  text-align: left;
 }
 
 /* Add some basic styling for form fields */
 form input {
-    width: 100%;
-    padding: 10px;
-    margin-bottom: 10px;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-    box-sizing: border-box;
-    font-size: 16px;
+  width: 100%;
+  padding: 10px;
+  margin-bottom: 10px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+  font-size: 16px;
 }
 
 form button {
-    background-color: #4CAF50;
-    color: white;
-    padding: 10px 20px;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-    font-size: 16px;
-    margin: 10px 0;
-    width: 100%;
+  background-color: #4caf50;
+  color: white;
+  padding: 10px 20px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  font-size: 16px;
+  margin: 10px 0;
+  width: 100%;
 }
 
 form button:hover {
-    background-color: #45a049;
+  background-color: #45a049;
 }
