Feat: add funcional carrousel to index
I made changes to the carousel, I separated the images I made in an editor
aside to add them to the caroulse. There must be 3 in it, 2 new ones,
also animation and transition, and like carousel ul, il, img, and keyframes
change where the steps of the scroll animation are done.

---------

Co-authored-by: edlazo <edlazo@colegiosolari.edu.ar>

--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -75,15 +75,47 @@ header img {
     }
 }
 
-/* Carousel Styles */
-.carousel {
-    max-width: 100%;
-    margin: 0 auto;
-    overflow: hidden; /* For carousel */
+/* carrousel */
+.slide-box {
+    width: 100%;
+    height: auto;
+    margin: 50px auto 0;
+    overflow: hidden;
 }
 
-.carousel img {
-    width: 100%; /* Ensuring images are responsive */
+.slide-box ul {
+    display: flex;
+    padding: 0;
+    width: 300%;
+    animation: slide 20s infinite alternate ease-in-out;
+}
+
+.slide-box li{
+    width: 100%;
+    list-style: none;
+    position: relative;
+}
+
+.slide-box img{
+    width: 100%;
+}
+
+@keyframes slide {
+    0% { margin-left: 0; }
+    33% { margin-left: 0; }
+
+    36% { margin-left: -100%; }
+    66% { margin-left: -100%; }
+
+    69% { margin-left: -200%; }
+    100% { margin-left: -200%; }
+}
+
+@media (max-width: 991px) {
+    .slide-box {
+        width: 100%;
+    }
+    
 }
 
 h2 {
