--- a/templates/product.html
+++ b/templates/product.html
@@ -33,7 +33,7 @@
     <div>
         <img src="/static/img/product1.webp" alt="">
         <h3>Producto 1</h3>
-        <p>Descripción del producto 1</p>
+        <p>Descripcion 1</p>
         <p>$100.00</p>
     </div>
     <div>
