--- a/templates/sign_in.html
+++ b/templates/sign_in.html
@@ -15,6 +15,7 @@
       </a>
       <!-- Form for register-->
       <form action="/submit_registration" method="post">
+        <p> Bienvenido de vuelta!</p>
         <label for="email">Correo Electronico:</label><br />
         <input
           type="email"
@@ -24,14 +25,15 @@
         />
         <label for="password">Contraseña:</label><br />
         <input type="password" id="password" name="password" />
-        <a href="/forgot_password">¿Te olvidaste la contraseña?</a>
+        <a href="/forgot_password">¿Te olvidaste la contraseña? Haz click Aquí</a>
+        <br />
         <br />
         <button>Iniciar sesion</button>
       </form>
     </div>
 
     <div class="container2">
-      <p>¿Nuevo en Petshop?</p>
+      <p>¿Nuevo en Petshop?</p><br />
       <a href="/templates/sign_up.html">Crear una cuenta.</a>
     </div>
   </body>
