--- a/templates/sign_up.html
+++ b/templates/sign_up.html
@@ -21,6 +21,7 @@
       </a>
       <!-- Form for register-->
       <form action="/submit_registration" method="post">
+        <p> Necesitamos algunos datos</p>
         <label for="name">Nombre:</label><br />
         <input
           type="text"
